{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 47,
  "lineage": "8caced4d-e028-3e96-9080-96371826a188",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002f3bc5bbf6794fb",
            "arn": "arn:aws:ec2:us-east-1:256337534898:elastic-ip/eipalloc-002f3bc5bbf6794fb",
            "domain": "vpc",
            "id": "eipalloc-002f3bc5bbf6794fb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-216-51-85.compute-1.amazonaws.com",
            "public_ip": "3.216.51.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "nat-eip",
              "Project": "demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nat-eip",
              "Project": "demo",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:256337534898:instance/i-07e5caf2afdd6066d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e5caf2afdd6066d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f3e749d4bc7fa59f",
            "private_dns": "ip-10-0-1-88.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.88",
            "public_ip": "54.144.32.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-073b328270cc91b9c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0deeac2d4d2450318",
            "tags": {
              "Environment": "dev",
              "Name": "nginx-server",
              "Project": "demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nginx-server",
              "Project": "demo",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e2d916a09524b64"
            ]
          },
          "dependencies": [
            "aws_security_group.common",
            "aws_subnet.main",
            "aws_vpc.existing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:256337534898:instance/i-05f891e3d3b14de0b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f891e3d3b14de0b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f0dfea64fd4eb401",
            "private_dns": "ip-10-0-2-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cd8a88f631622c1c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0279435a675b5216b",
            "tags": {
              "Environment": "dev",
              "Name": "apache-server",
              "Project": "demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "apache-server",
              "Project": "demo",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e2d916a09524b64"
            ]
          },
          "dependencies": [
            "aws_security_group.common",
            "aws_subnet.main",
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256337534898:internet-gateway/igw-08dd0a9e173905c86",
            "id": "igw-08dd0a9e173905c86",
            "owner_id": "256337534898",
            "tags": {
              "Environment": "dev",
              "Name": "main-igw",
              "Project": "demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "main-igw",
              "Project": "demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01d2e14b8b1ee0d30"
          },
          "dependencies": [
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002f3bc5bbf6794fb",
            "association_id": "eipassoc-0c2a63e54026fc716",
            "connectivity_type": "public",
            "id": "nat-045f6816f6d9583ba",
            "network_interface_id": "eni-0c9705cbccb34510f",
            "private_ip": "10.0.1.157",
            "public_ip": "3.216.51.85",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0deeac2d4d2450318",
            "tags": {
              "Environment": "dev",
              "Name": "main-nat",
              "Project": "demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "main-nat",
              "Project": "demo",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.main",
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256337534898:route-table/rtb-08889bfa5f92bca50",
            "id": "rtb-08889bfa5f92bca50",
            "owner_id": "256337534898",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08dd0a9e173905c86",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "public-rt",
              "Project": "demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-rt",
              "Project": "demo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d2e14b8b1ee0d30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.main",
            "aws_vpc.existing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256337534898:route-table/rtb-02fecaefb64cba78c",
            "id": "rtb-02fecaefb64cba78c",
            "owner_id": "256337534898",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-045f6816f6d9583ba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "private-rt",
              "Project": "demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-rt",
              "Project": "demo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d2e14b8b1ee0d30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.main",
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5d410adf667f8c4",
            "route_table_id": "rtb-08889bfa5f92bca50",
            "subnet_id": "subnet-0deeac2d4d2450318"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.existing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c76484a98f3ad653",
            "route_table_id": "rtb-02fecaefb64cba78c",
            "subnet_id": "subnet-0279435a675b5216b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256337534898:security-group/sg-02e2d916a09524b64",
            "description": "Common security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e2d916a09524b64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "common-sg",
            "name_prefix": "",
            "owner_id": "256337534898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "common-sg",
              "Project": "demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "common-sg",
              "Project": "demo",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d2e14b8b1ee0d30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256337534898:subnet/subnet-0deeac2d4d2450318",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0deeac2d4d2450318",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "256337534898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet",
              "Project": "demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet",
              "Project": "demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01d2e14b8b1ee0d30"
          },
          "dependencies": [
            "aws_vpc.existing"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256337534898:subnet/subnet-0279435a675b5216b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0279435a675b5216b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "256337534898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet",
              "Project": "demo",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet",
              "Project": "demo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01d2e14b8b1ee0d30"
          },
          "dependencies": [
            "aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:256337534898:vpc/vpc-01d2e14b8b1ee0d30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-080cd07bfd7db9159",
            "default_route_table_id": "rtb-05ede05f6975dafab",
            "default_security_group_id": "sg-032dfdd46e2d2c153",
            "dhcp_options_id": "dopt-0820451f32e4dea3b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d2e14b8b1ee0d30",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ede05f6975dafab",
            "owner_id": "256337534898"
          }
        }
      ]
    }
  ]
}